merge rama main y reestablecer